Fix up scrolling in info field when too much text

--- a/client/client.css
+++ b/client/client.css
@@ -58,6 +58,8 @@
   right: 0;
   top: 0;
   width: 30%;
+  overflow-y: auto;
+  overflow-x: auto;
 }
 #chattrr_out_infoTable {
   width: 100%;
